[tool.poetry]
name = "lisetteproject"
version = "0.1.0"
description = "This project is to create an autonomous photographer that can move around on command using self-driving technology."
authors = ["David Godinez <davidgodinez70@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
